# shadowlist

./: .gitignore  .prettierignore  .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  eslint.config.mjs  lefthook.yml  package.json  react-native-craigs-list.podspec  react-native-shadow-list.podspec  react-native.config.js  shadowlist.podspec  tsconfig.base.json  tsconfig.json
android/: build.gradle  gradle.properties
android/jni/: CMakeLists.txt  RNShadowListContainerSpec-generated.cpp  RNShadowListContainerSpec.cpp  RNShadowListContainerSpec.h
android/jni/react/renderer/components/RNShadowListContainerSpec/: ComponentDescriptors.cpp  ComponentDescriptors.h  EventEmitters.cpp  Props.cpp  Props.h  RNShadowListContainerSpecJSI-generated.cpp  RNShadowListContainerSpecJSI.h  ShadowNodes.cpp  ShadowNodes.h  States.cpp
android/shadowlist/jni/: CMakeLists.txt  OnLoad.cpp  RNShadowlistSpec.cpp  RNShadowlistSpec.h  ShadowlistModule.cpp  ShadowlistModule.h
android/shadowlist/jni/react/renderer/components/RNShadowlistSpec/: ComponentDescriptors.cpp  ComponentDescriptors.h
cpp/: CMakeLists.txt  RNShadowListContainerSpec.cpp  RNShadowListContainerSpec.h  SLContainerSpec.cpp  SLContainerSpec.h  SLElementSpec.cpp  SLElementSpec.h  cpp-adapter.cpp
cpp/RNCraigsListContainerSpec/: CraigsListContainerComponentDescriptor.cpp  CraigsListContainerComponentDescriptor.h  CraigsListContainerEventEmitter.cpp  CraigsListContainerEventEmitter.h  CraigsListContainerHelpers.h  CraigsListContainerProps.cpp  CraigsListContainerProps.h  CraigsListContainerShadowNode.cpp  CraigsListContainerShadowNode.h  CraigsListContainerState.cpp  CraigsListContainerState.h  CraigsListFenwickTree.cpp  CraigsListFenwickTree.hpp
cpp/RNCraigsListItemSpec/: CraigsListItemComponentDescriptor.cpp  CraigsListItemComponentDescriptor.h  CraigsListItemEventEmitter.cpp  CraigsListItemEventEmitter.h  CraigsListItemHelpers.h  CraigsListItemProps.cpp  CraigsListItemProps.h  CraigsListItemShadowNode.cpp  CraigsListItemShadowNode.h  CraigsListItemState.cpp  CraigsListItemState.h
cpp/RNShadowListContainerSpec/: ShadowListContainerComponentDescriptor.cpp  ShadowListContainerComponentDescriptor.h  ShadowListContainerEventEmitter.cpp  ShadowListContainerProps.cpp  ShadowListContainerProps.h  ShadowListContainerShadowNode.cpp  ShadowListContainerShadowNode.h  ShadowListContainerState.cpp  ShadowListContainerState.h  ShadowListFenwickTree.cpp
cpp/RNShadowListItemSpec/: ShadowListItemComponentDescriptor.cpp  ShadowListItemProps.cpp  ShadowListItemProps.h
cpp/core/: Offsetter.h  SLMeasurementsManager.cpp  SLMeasurementsManager.h  SLRegistryManager.cpp  SLRegistryManager.h
cpp/fenwick/: SLFenwickTree.cpp  SLFenwickTree.hpp
cpp/helpers/: Offsetter.h  SLRegistryManager.cpp  SLRegistryManager.h  helpers.h
cpp/json/: json.hpp
cpp/module/: SLModuleSpecJSI.cpp  SLModuleSpecJSI.h
cpp/module/SLModuleSpec/: SLCommitHook.cpp  SLCommitHook.h  SLKeyExtractor.cpp  SLKeyExtractor.h  SLModuleJSI.h  SLModuleSpec.h  SLModuleSpec.mm  SLTemplate.cpp  SLTemplate.h
cpp/react/renderer/components/RNShadowListContainerSpec/: ComponentDescriptors.cpp  ComponentDescriptors.h  Scrollable.cpp  Scrollable.h  ShadowListContainerComponentDescriptor.h  ShadowListContainerEventEmitter.cpp  ShadowListContainerEventEmitter.h  ShadowListContainerHelpers.h  ShadowListContainerProps.cpp  ShadowListContainerProps.h  ShadowListContainerShadowNode.cpp  ShadowListContainerShadowNode.h  ShadowListContainerState.cpp  ShadowListContainerState.h  conversions.h
cpp/react/renderer/components/RNShadowListContentSpec/: ComponentDescriptors.h  Scrollable.cpp  Scrollable.h  ShadowListContentComponentDescriptor.cpp  ShadowListContentComponentDescriptor.h  ShadowListContentEventEmitter.cpp  ShadowListContentEventEmitter.h  ShadowListContentHelpers.h  ShadowListContentProps.cpp  ShadowListContentProps.h  ShadowListContentShadowNode.cpp  ShadowListContentShadowNode.h  ShadowListContentState.cpp  ShadowListContentState.h
cpp/react/renderer/components/RNShadowListItemSpec/: ComponentDescriptors.cpp  ComponentDescriptors.h  ShadowListItemEventEmitter.cpp  ShadowListItemEventEmitter.h  ShadowListItemShadowNode.cpp  ShadowListItemShadowNode.h  ShadowListItemState.cpp  ShadowListItemState.h
cpp/react/renderer/components/RNShadowlistSpec/: RNShadowlistSpecJSI.cpp  RNShadowlistSpecJSI.h  SLCommitHook.cpp  SLCommitHook.h  SLKeyExtractor.cpp  SLKeyExtractor.h  SLModuleJSI.cpp  SLModuleJSI.h  SLRuntimeManager.h  SLTemplate.cpp  SLTemplate.h
cpp/react/renderer/components/SLContainerSpec/: ComponentDescriptors.h  SLContainerComponentDescriptor.cpp  SLContainerComponentDescriptor.h  SLContainerEventEmitter.cpp  SLContainerEventEmitter.h  SLContainerHelpers.h  SLContainerProps.cpp  SLContainerProps.h  SLContainerShadowNode.cpp  SLContainerShadowNode.h  SLContainerState.cpp  SLContainerState.h
cpp/react/renderer/components/SLContentSpec/: SLContentComponentDescriptor.h  SLContentEventEmitter.cpp  SLContentEventEmitter.h  SLContentHelpers.h  SLContentProps.cpp  SLContentProps.h  SLContentShadowNode.cpp  SLContentShadowNode.h  SLContentState.cpp  SLContentState.h
cpp/react/renderer/components/SLElementSpec/: ComponentDescriptors.h  SLElementComponentDescriptor.cpp  SLElementComponentDescriptor.h  SLElementEventEmitter.cpp  SLElementEventEmitter.h  SLElementHelpers.h  SLElementProps.cpp  SLElementProps.h  SLElementShadowNode.cpp  SLElementShadowNode.h  SLElementState.cpp  SLElementState.h
cpp/registry/: SLComponentRegistry.cpp  SLComponentRegistry.h
example/: README.md  app.json  metro.config.js  package.json
ios/: CraigsListContainer.h  CraigsListContainer.mm  CraigsListContainerManager.mm  CraigsListItem.h  CraigsListItem.mm  CraigsListItemManager.mm  CraigsListView.h  CraigsListView.mm  CraigsListViewManager.mm  RNShadowlistSpec.h  RNShadowlistSpec.mm  SLContainer.h  SLContainer.mm  SLContainerChildrenManager.h  SLContainerChildrenManager.mm  SLContainerManager.mm  SLContent.h  SLContent.mm  SLContentManager.mm  SLElement.h  SLElement.mm  SLElementManager.mm  (+20 more)
(+134 files in other folders)
